# ESP8266

./: .gitignore  .gitmodules  .tags  .travis.yml  CMakeLists.txt  LICENSE  README.md  configure  make  package  platformio.ini  requirements.txt
.github/workflows/: build.yml
Ambi-Light-LE46B650/: .gitignore  CMakeLists.txt  README.md  platformio.ini
Ambi-Light-LE46B650/src/: ambi.cpp
Decorative-Lights/: CMakeLists.txt  platformio.ini
Decorative-Lights/models/: lantern-top.stl  wemos-reset-button.stl
Decorative-Lights/resources/: index.html  login.html
Decorative-Lights/src/: lights.cpp
HID-Emulator/: CMakeLists.txt  README.md  extra_script.py  platformio.ini
HID-Emulator/resources/: css  index.html  login.html
HID-Emulator/src/: hid.cpp
HUE-Bridge/: CMakeLists.txt  README.md  extra_script.py  platformio.ini
HUE-Bridge/src/: bridge.cpp
HUE-Emulator/: extra_script.py  platformio.ini
HUE-Emulator/src/: bridge.cpp
IOT-Template/: extra_script.py  platformio.ini
IOTbase/: .gitignore  CMakeLists.txt  extra_script.py  platformio.ini
IOTbase/data/: index.html
IOTbase/resources/: index.html  login.html
IOTbase/src/: iot.cpp
ambi-light-LE46B650/: platformio.ini
ambi-light-LE46B650/src/: ambi.cpp
data/: config.json  index.html
data/css/: common_style.css  index_style.css  login_style.css
esp-lights/: README.md  platformio.ini
hid-emulator/: platformio.ini
hue-emulator/: platformio.ini
iot-template/: README.md  platformio.ini
lib/: readme.txt
package-ffs/: credentials.py  minify.py  requirements.txt
src/: wemos.cpp
(+175 files in other folders)
